Commons : Text Selectable : Add clickable button

--- a/src/app/private/trainer/settings/directives.tmpl/infos-form.html
+++ b/src/app/private/trainer/settings/directives.tmpl/infos-form.html
@@ -22,6 +22,6 @@
  	</label>
 	<label class="infos__label">Access key</label>
 	<input ng-readonly="isReadonly" ng-model="activeInfos.token" class="input input--small" type="text" placeholder="Access key without space is required" />
-	<label class="infos__label">guests or registered players can access the session following this link : <span class="tool tool--selectable" text-selectable>http://wegas.albasim.ch/#/play/{{activeInfos.token}}</span></label>
+	<label class="infos__label">guests or registered players can access the session following the link below. <span class="link link--selector" title="select the link"><i class="fa fa-text-width"></i></span><span class="tool tool--selectable" text-selectable>http://wegas.albasim.ch/#/play/{{activeInfos.token}}</span></label>
  	<label class="infos__label">Session based on scenario : {{activeInfos.scenario}}</label>
 </div>
