--- a/src/app/private/player/join-team/join-team.tmpl.html
+++ b/src/app/private/player/join-team/join-team.tmpl.html
@@ -1,2 +1,3 @@
-<div class="modal modal--join-team" close="modalsCtrl.close()" player-session-join-index></div>
-<div class="shadow" ng-click="modalsCtrl.close()"></div>
+<div modal-window modal-style="modal--join-team" opened="modalsCtrl.opened" close="modalsCtrl.close()">
+	<player-session-join-index close="modalsCtrl.close()"></player-session-join-index>
+</div> 
