Modal service : Edit publicspace

--- a/src/app/public/signup/signup.tmpl.html
+++ b/src/app/public/signup/signup.tmpl.html
@@ -1,2 +1,3 @@
-<div class="modal modal--public-signup" public-signup-index close="modalsCtrl.close()"></div>
-<div class="shadow" ng-click="modalsCtrl.close()"></div>
+<div modal-window modal-style="modal--public-signup" opened="modalsCtrl.opened" close="modalsCtrl.close()">
+	<public-signup-index close="modalsCtrl.close()"></public-signup-index>
+</div> 
