--- a/src/app/public/password/password.tmpl.html
+++ b/src/app/public/password/password.tmpl.html
@@ -1,2 +1,3 @@
-<div class="modal modal--public-password" public-password-index close="modalsCtrl.close()"></div>
-<div class="shadow" ng-click="modalsCtrl.close()"></div>
+<div modal-window modal-style="modal--public-password" opened="modalsCtrl.opened" close="modalsCtrl.close()">
+	<public-password-index close="modalsCtrl.close()"></public-password-index>
+</div> 
