Modal service : Edit scenarist workspace

--- a/src/app/private/scenarist/archives/archives.tmpl.html
+++ b/src/app/private/scenarist/archives/archives.tmpl.html
@@ -1,2 +1,3 @@
-<div class="modal modal--archives" scenarist-scenarios-archives-index close="modalsCtrl.close()"></div>
-<div class="shadow" ng-click="modalsCtrl.close()"></div>
+<div modal-window modal-style="modal--archives" opened="modalsCtrl.opened" close="modalsCtrl.close()">
+	<scenarist-scenarios-archives-index close="modalsCtrl.close()"></scenarist-scenarios-archives-index>
+</div> 
