--- a/src/app/private/scenarist/coscenarists/coscenarists.tmpl.html
+++ b/src/app/private/scenarist/coscenarists/coscenarists.tmpl.html
@@ -1,2 +1,3 @@
-<div class="modal modal--coscenarists" scenarist-coscenarists-index close="modalsCtrl.close()"></div>
-<div class="shadow" ng-click="modalsCtrl.close()"></div>
+<div modal-window modal-style="modal--coscenarists" opened="modalsCtrl.opened" close="modalsCtrl.close()">
+	<scenarist-coscenarists-index close="modalsCtrl.close()"></scenarist-coscenarists-index>
+</div> 
