--- a/src/app/private/scenarist/history/history.tmpl.html
+++ b/src/app/private/scenarist/history/history.tmpl.html
@@ -1,3 +1,3 @@
-
-<div class="modal modal--history" scenarist-history-index close="modalsCtrl.close()"></div>
-<div class="shadow" ng-click="modalsCtrl.close()"></div>
+<div modal-window modal-style="modal--history" opened="modalsCtrl.opened" close="modalsCtrl.close()">
+	<scenarist-history-index close="modalsCtrl.close()"></scenarist-history-index>
+</div> 
