Modal service : Edit trainer workspace

--- a/src/app/private/trainer/users/users.tmpl.html
+++ b/src/app/private/trainer/users/users.tmpl.html
@@ -1,2 +1,3 @@
-<div class="modal modal--users" trainer-sessions-users-index close="modalsCtrl.close()"></div>
-<div class="shadow" ng-click="modalsCtrl.close()"></div>
+<div modal-window modal-style="modal--users" opened="modalsCtrl.opened" close="modalsCtrl.close()">
+	<trainer-sessions-users-index close="modalsCtrl.close()"></trainer-sessions-users-index>
+</div> 
