--- a/src/app/private/trainer/archives/archives.tmpl.html
+++ b/src/app/private/trainer/archives/archives.tmpl.html
@@ -1,2 +1,3 @@
-<div class="modal modal--archives" trainer-sessions-archives-index modal="modal" close="modalsCtrl.close()"></div>
-<div class="shadow" ng-click="modalsCtrl.close()"></div>
+<div modal-window modal-style="modal--archives" opened="modalsCtrl.opened" close="modalsCtrl.close()">
+	<trainer-sessions-archives-index close="modalsCtrl.close()"></trainer-sessions-archives-index>
+</div> 
