--- a/src/app/private/trainer/settings/settings.tmpl.html
+++ b/src/app/private/trainer/settings/settings.tmpl.html
@@ -1,2 +1,3 @@
-<div class="modal modal--settings" trainer-sessions-settings-index close="modalsCtrl.close()"></div>
-<div class="shadow" ng-click="modalsCtrl.close()"></div>
+<div modal-window modal-style="modal--settings" opened="modalsCtrl.opened" close="modalsCtrl.close()">
+	<trainer-sessions-settings-index close="modalsCtrl.close()"></trainer-sessions-settings-index>
+</div> 
